<resources>
    <string name="app_name">Notes</string>

    <string name="to_list">To list</string>
    <string name="to_grid">To grid</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search notes</string>

    <string name="floating_button_description">add_note</string>
    <string name="delete_note">Delete note</string>
    <string name="create_todo_list">Create to do list</string>
    <string name="save_note">Save note</string>
    <string name="layout_color">Set layout color</string>
    <string name="share_note">Share note</string>
    <string name="delete_dialog_button">Delete</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="dialog_title">Delete this note?</string>
    <string name="dialog_message">Are you sure you want to delete this note?</string>

    <string name="fill_fields_error_msg">fill out all fields</string>
    <string name="save_note_warning_msg">You must to save note</string>


</resources>